# mai

./: .gitignore  README.md  plot_restoration.ipynb
.ipynb_checkpoints/: plot_restoration-checkpoint.ipynb
aviahack/: README.md
aviahack/hack/: db.sqlite3  manage.py
aviahack/hack/ahck/: mixin.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
bank-app/: Dockerfile  build.gradle.kts  settings.gradle.kts
bank-app/k8s/: deployment.yaml  ingress.yaml  service.yaml
course1/inf-labs/: README.md
course1/inf-labs/lab20/: otchet20.doc
course1/inf-labs/lab21/: otchet21.doc  split.sh
course1/inf-labs/lab22/: note.aux  note.fdb_latexmk  note.fls  note.tex  otchet22.doc
course1/inf-labs/lab23/: Makefile  bintree.c  bintree.h  check_memory.sh  main  main.c  otchet23.doc
course1/inf-labs/lab24/: Makefile  deq.c  deq.h  main.c  opn.c  opn.h  otchet24.doc  tree.c  tree.h
course1/inf-labs/lab25-26/: Makefile  main  main.c  otchet25-26.doc  sort.c  sort.h  (+1 more)
course2/oop/oop_exercise_01/: CMakeLists.txt  README.md  main.cpp
course2/oop/oop_exercise_01/src/: big_int.cpp  big_int.h
course2/oop/oop_exercise_01/test/: test.cpp
course2/oop/oop_exercise_02/: CMakeLists.txt  README.md  main.cpp
course2/oop/oop_exercise_02/src/: complex.cpp  complex.h
course2/oop/oop_exercise_02/test/: test.cpp
course2/oop/oop_exercise_03/: CMakeLists.txt  README.md  main.cpp
course2/oop/oop_exercise_03/src/: figure.cpp  figure.h  point.cpp  point.h  rectangle.cpp  rectnagle.h  square.cpp  square.h  triangle.cpp  triangle.h
course2/oop/oop_exercise_03/test/: test.cpp
course2/os/KP/: CMakeLists.txt  app.cpp  report.docx  store1.cpp  store2.cpp  test_gen.py
course2/os/KP/src/: message.h  msg_service.h  storage.h  storage_api.h
course2/os/lab06/: CMakeLists.txt  calc_node.cpp  main.cpp  report.docx  test_gen.py
course2/os/lab06/src/: message.h  node.h
good-carton-simple-website/: README.md  index.html
good-carton-simple-website/css/: style.css
good-carton-simple-website/slick/: slick-theme.css  slick.css
mai-shazam/: CMakeLists.txt  README.md  input  search
mai-shazam/src/: main.cpp
mai-shazam/src/ArgParsing/: ArgParse.cpp  ArgParse.hpp  ParseConstants.hpp
mai-shazam/src/AudioDb/: AudioDB.cpp  AudioDB.hpp
mai-shazam/src/Complex/: Complex.hpp
mai-shazam/src/Controller/: Controller.cpp  Controller.hpp
mai-shazam/src/Fft/: Fft.cpp  Fft.hpp
mai-shazam/src/Mp3/: Mp3.cpp  Mp3.hpp
mult/.ipynb_checkpoints/: Lab_3-checkpoint.ipynb
mult/lab1/: test.txt  СинДенисДмитриевич.ipynb
mult/lab2/: 2.ipynb
mult/lab3/: СинДенисДмитриевич.ipynb
mult/lab4/: Син_Денис_Дмитриевич.ipynb
neiro-infa/: README.md
neiro-infa/lab1/: lab1.ipynb
neiro-infa/lab2/: lab2.ipynb
neiro-infa/lab3/: lab3.ipynb
neiro-infa/lab4/: lab4.ipynb
neiro-infa/lab5/: lab5.ipynb
neiro-infa/lab6/: lab6.ipynb
neiro-infa/lab7/: lab7.ipynb
neiro-infa/lab8/: lab8.ipynb
numeric-methods/: README.md  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
react-book-store/: README.md  package.json
react-book-store/public/: index.html
react-book-store/src/: index.js
slider/: README.md  package.json
slider/public/: index.html
slider/src/: index.js
todo/: README.md  package-lock.json  package.json  ref.docx  webpack.config.js  ~$ref.docx
todo/todo/: db.sqlite3
(+253 files in other folders)
